# smartinspect-python

./: .gitignore  AGENT_PYTHON_LOGGING_QUICKSTART.md  PARITY_MATRIX.md  README.md  pyproject.toml
smartinspect/: __init__.py  context_api.py  contexts.py  enums.py  formatter.py  handler.py  protocol.py  session.py  smartinspect.py
tests/: test_async_dispatch.py  test_csharp_parity_surface.py  test_parity_context_metrics.py
